# minimal-python-template

./: README.md  cookiecutter.json  project.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: basic_ci.yml
hooks/: pre_gen_project.py
{{cookiecutter.directory_name}}/: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
{{cookiecutter.directory_name}}/.github/workflows/: basic_ci.yml
{{cookiecutter.directory_name}}/tests/: test_my_module.py
{{cookiecutter.directory_name}}/{{cookiecutter.package_name}}/: __init__.py  my_module.py
